# pycde_example

./: .gitignore  README.md  alu.py  bit_pat.py  bru.py  cache.py  circt_api.py  codic.py  const.py  counter.py  csr.py  csr_gen.py  esi.py  esi_test.py  fir_filter.py  hwarith.py  immgen.py  lfsr.py  pyproject.toml  readable.py  regfile.py  requirements.txt
.github/workflows/: python-package.yml
mini_riscv/: alu.py  datapath.py  instructions.py  nasti.py  regfile.py
pycde_example/: ahb_ram.py  ahb_to_ram.py  alwaysff_example.py  case_example.py  circt_api.py  codic.py  conftest.py  counter.py  esi.py  fifo.py  fir_example.py  fir_filter.py  hwarith.py  ifelse_example.py  lfsr.py  my_counter.py  my_lfsr.py  readable.py  seq_ops_example.py  test_ahb_ram.py  test_ahb_to_ram.py
pycde_example/doc/: learn_pycde.md  pycde_basics.md  python_basics.md
pycde_example/mini_riscv/: __main__.py  alu.py  bit_pat.py  bru.py  cache.py  const.py  control.py  core.py  csr.py  csr_gen.py  datapath.py  immgen.py  instructions.py  nasti.py  regfile.py  tile.py
python_needed/: pycde学习记录  python语法
