[project]
name = "pycde_example"
version = "0.1.0"
description = "A collection of examples showcasing PyCDE and Mini RISC-V implementation."
authors = [
    { name="Dragon-Git", email="1762578117@qq.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML",
    "cocotb",
    "pycde",
]

[project.urls]
"Homepage" = "https://github.com//Dragon-Git/pycde_example"
"Bug Tracker" = "https://github.com//Dragon-Git/pycde_example/issues"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 120

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120

[tool.ruff.pydocstyle]
    convention = "google"
    